[package]
name = "priority-async-mutex"
version = "0.1.0"
edition = "2021"
license="ISC"
repository="https://github.com/nullchinchilla/priority-async-mutex"
description="An async mutex where the lock operation takes a priority"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.5"
simple-mutex = "1.1.5"
# parking_lot = {version="0.12.1", features=["send_guard"]}

[dev-dependencies]
smol="1"
fastrand="1"
